[package]
name = "bevy-orbit"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/WaffleSoul4/bevy-orbit"
authors = ["Waffleleroo <Waffleleroo@gmail.com>"]
description = "A proof of concept simulation/game with gravity"
license = "MIT"

[dependencies]
avian2d = "0.2.1"
bevy = "0.15.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3