[package]
name = "bevy-orbit"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/WaffleSoul4/bevy-orbit"
authors = ["Waffleleroo <Waffleleroo@gmail.com>"]
description = "A proof of concept simulation/game with gravity"
license = "MIT"

[dependencies]
avian2d = { version = "0.3.0", features = ["serialize"] }
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
